# makeanime

./: .gitignore  README.md  app.py  pyproject.toml
.github/: README.md
src/makeanime/: __main__.py  cli.py
